Fixed that bussiness-expertises list is visible when modal opened

--- a/css/style_new.css
+++ b/css/style_new.css
@@ -3066,6 +3066,7 @@ margin-left: -30px;
 .bussiness-ex ul {
   width: 60%;
   float: left;
+  padding-top: 7px;
 }
 .technical-ex div>h4 {
   padding-left: 40%;
